# poppet

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  USAGE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cascadeur_side/poppet/: _dispatchers.py  _framing.py  _introspect.py  _listener.py  _paths.py  drain_dialog.py  poc_tick_loop.py  process_pending.py  refresh_schema.py  settings.cfg  start_server.py
cascadeur_side/poppet_events/scene_activated/: poppet_drain.py
cascadeur_side/poppet_events/scene_opened/: poppet_drain.py
docs/: architecture.md  mcp_client_configs.md
scripts/: benchmark.py  demo_batch_spec4.py  demo_import_fbx_roundtrip.py  demo_mcp_client.py  demo_v02_new_tools.py  demo_v03_layer_ops.py  install.ps1  install.sh  install_check.py  mcp_smoke_test.py  poc_client.py  publish.sh
src/poppet_mcp/: _nudge.py  cascadeur_connection.py  server.py
tests/: conftest.py  test_cascadeur_connection.py  test_dispatch_routing.py  test_events_handler.py  test_framing.py  test_mcp_server.py  test_new_dispatchers.py  test_process_pending.py  test_vec_helpers.py
